src/test/resources/purescript_examples/failing/1733.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownName\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Thingy')
          PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Thing')
          PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Var)
              PSASTWrapperElement(Qualified)
                PSASTWrapperElement(QualifiedModuleName)
                  PsiElement(proper name)('Thing')
                PsiElement(.)('.')
                PsiElement(identifier)('doesntExist')
                PsiElement(whitespace)(' ')
            PSASTWrapperElement(StringLiteral)
              PsiElement(string)('"hi"')
              PsiElement(whitespace)('\n')
